Fixes issue where users on small resolutions couldn't see the whole sheet. This is an imperfect solution, but it's an easy one to make so that everyone can use the sheet for now. My intention is to redesign the sheet a little, so that it is wider than it is taller, and will probably move some information to different tabs.

--- a/starfinder.css
+++ b/starfinder.css
@@ -1238,7 +1238,6 @@
 /* ----------------------------------------- */
 .starfinder.sheet.actor.character {
   min-width: 715px;
-  min-height: 830px;
   /* ----------------------------------------- */
   /*  Sheet Header                             */
   /* ----------------------------------------- */
